--- a/client/UI/variant_2/zadanie2_part1_var2.ui
+++ b/client/UI/variant_2/zadanie2_part1_var2.ui
@@ -36,7 +36,7 @@
    <property name="text">
     <string>Задание 2.*
  Сгруппируйте слова согласно их
- частям речи и переведите их.</string>
+ частям речи и переведите их. (n, v, adj)</string>
    </property>
    <property name="textFormat">
     <enum>Qt::AutoText</enum>
@@ -640,9 +640,9 @@
   <widget class="QLabel" name="label_timer">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>240</x>
      <y>320</y>
-     <width>171</width>
+     <width>211</width>
      <height>31</height>
     </rect>
    </property>
