--- a/server/UI/variant_1/zadanie3_4_5_part1_var1.ui
+++ b/server/UI/variant_1/zadanie3_4_5_part1_var1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>863</width>
-    <height>644</height>
+    <width>881</width>
+    <height>667</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -329,7 +329,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>390</y>
+     <y>410</y>
      <width>341</width>
      <height>20</height>
     </rect>
@@ -371,7 +371,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>80</y>
+     <y>110</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -384,7 +384,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>80</y>
+     <y>110</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -394,7 +394,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>100</y>
+     <y>130</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -408,7 +408,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>110</y>
+     <y>140</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -418,7 +418,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>140</y>
+     <y>170</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -431,7 +431,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>140</y>
+     <y>170</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -441,7 +441,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>170</y>
+     <y>200</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -454,7 +454,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>170</y>
+     <y>200</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -464,7 +464,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>190</y>
+     <y>220</y>
      <width>221</width>
      <height>61</height>
     </rect>
@@ -479,7 +479,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>210</y>
+     <y>240</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -489,7 +489,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>250</y>
+     <y>280</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -503,7 +503,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>260</y>
+     <y>290</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -513,7 +513,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>290</y>
+     <y>320</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -527,7 +527,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>290</y>
+     <y>320</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -537,7 +537,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>330</y>
+     <y>360</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -550,7 +550,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>330</y>
+     <y>360</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -560,7 +560,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>360</y>
+     <y>390</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -573,7 +573,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>360</y>
+     <y>390</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -583,7 +583,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>390</y>
+     <y>420</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -596,7 +596,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>390</y>
+     <y>420</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -606,7 +606,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>420</y>
+     <y>450</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -620,7 +620,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>420</y>
+     <y>450</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -630,7 +630,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>460</y>
+     <y>490</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -643,7 +643,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>460</y>
+     <y>490</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -653,7 +653,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>490</y>
+     <y>520</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -666,7 +666,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>490</y>
+     <y>520</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -676,7 +676,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>520</y>
+     <y>550</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -690,7 +690,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>520</y>
+     <y>550</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -700,7 +700,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>560</y>
+     <y>590</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -714,7 +714,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>560</y>
+     <y>590</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -724,7 +724,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>600</y>
+     <y>630</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -738,7 +738,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>600</y>
+     <y>630</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -761,7 +761,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>420</y>
+     <y>460</y>
      <width>341</width>
      <height>20</height>
     </rect>
@@ -770,8 +770,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_17">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>80</y>
+     <x>810</x>
+     <y>110</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -780,8 +780,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_18">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>110</y>
+     <x>810</x>
+     <y>140</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -790,8 +790,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_19">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>140</y>
+     <x>810</x>
+     <y>170</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -800,8 +800,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_20">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>170</y>
+     <x>810</x>
+     <y>200</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -810,8 +810,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_21">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>210</y>
+     <x>810</x>
+     <y>240</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -820,8 +820,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_22">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>260</y>
+     <x>810</x>
+     <y>290</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -830,8 +830,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_23">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>290</y>
+     <x>810</x>
+     <y>320</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -840,8 +840,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_24">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>330</y>
+     <x>810</x>
+     <y>360</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -850,8 +850,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_25">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>360</y>
+     <x>810</x>
+     <y>390</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -860,8 +860,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_26">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>390</y>
+     <x>810</x>
+     <y>420</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -870,8 +870,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_27">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>420</y>
+     <x>810</x>
+     <y>450</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -880,8 +880,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_28">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>460</y>
+     <x>810</x>
+     <y>490</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -890,8 +890,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_29">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>490</y>
+     <x>810</x>
+     <y>520</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -900,8 +900,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_30">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>520</y>
+     <x>810</x>
+     <y>550</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -910,8 +910,8 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_31">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>560</y>
+     <x>810</x>
+     <y>590</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -920,11 +920,63 @@
   <widget class="QLineEdit" name="lineEdit_zadane5_32">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>600</y>
+     <x>810</x>
+     <y>630</y>
      <width>41</width>
      <height>20</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_15">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>390</y>
+     <width>41</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_19">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>440</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_21">
+   <property name="geometry">
+    <rect>
+     <x>730</x>
+     <y>90</y>
+     <width>41</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_22">
+   <property name="geometry">
+    <rect>
+     <x>780</x>
+     <y>90</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
    </property>
   </widget>
  </widget>
