--- a/server/UI/variant_1/zadanie6_part1_var1.ui
+++ b/server/UI/variant_1/zadanie6_part1_var1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>421</width>
-    <height>585</height>
+    <width>531</width>
+    <height>542</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -77,7 +77,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>equation</string>
+    <string>determined</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_answer_10">
@@ -111,19 +111,6 @@
      <width>31</width>
      <height>20</height>
     </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_answer">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>540</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Далее</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_number_15">
@@ -172,7 +159,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>often</string>
+    <string>usually</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_number_1">
@@ -221,7 +208,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>inversely</string>
+    <string>insulator</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_answer_8">
@@ -270,7 +257,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>commonly</string>
+    <string>figures</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_4">
@@ -283,7 +270,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>circuit</string>
+    <string>limited</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_13">
@@ -296,7 +283,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>high</string>
+    <string>measure</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_answer_9">
@@ -345,7 +332,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>heat</string>
+    <string>flowing</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_7">
@@ -358,7 +345,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>collide</string>
+    <string>relationship</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_10">
@@ -371,7 +358,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>electrical</string>
+    <string>decrease</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_2">
@@ -384,7 +371,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>electric</string>
+    <string>components</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_answer_4">
@@ -427,7 +414,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>proportional</string>
+    <string>advantage</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_number_6">
@@ -476,7 +463,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>offer</string>
+    <string>wire</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_number_13">
@@ -574,7 +561,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>restrict</string>
+    <string>using</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_11">
@@ -587,7 +574,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>length</string>
+    <string>permit</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_answer_5">
@@ -600,212 +587,420 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_word_16">
+  <widget class="QLabel" name="label_21">
    <property name="geometry">
     <rect>
-     <x>212</x>
-     <y>360</y>
-     <width>81</width>
+     <x>350</x>
+     <y>70</y>
+     <width>41</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_22">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>70</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_16">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>90</y>
+     <width>31</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>electrical</string>
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_17">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>120</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_18">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>150</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_19">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>180</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_20">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>210</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_21">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>240</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_22">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>270</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_23">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>300</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_24">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>330</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_25">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>360</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_26">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>390</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_27">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>420</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_28">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>450</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_29">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>480</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_30">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>510</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_16">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>90</y>
+     <width>101</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_17">
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>180</y>
-     <width>81</width>
+     <y>120</y>
+     <width>111</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>circuit</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_18">
    <property name="geometry">
     <rect>
-     <x>212</x>
-     <y>330</y>
-     <width>81</width>
+     <x>210</x>
+     <y>150</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>often</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_19">
    <property name="geometry">
     <rect>
-     <x>212</x>
-     <y>510</y>
-     <width>81</width>
+     <x>210</x>
+     <y>180</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>proportional</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_20">
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>270</y>
-     <width>81</width>
+     <y>210</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>collide</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_21">
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>300</y>
-     <width>81</width>
+     <y>240</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>heat</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_22">
    <property name="geometry">
     <rect>
-     <x>212</x>
-     <y>390</y>
-     <width>81</width>
+     <x>210</x>
+     <y>270</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>length</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_23">
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>150</y>
-     <width>81</width>
+     <y>300</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>commonly</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_24">
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>240</y>
-     <width>81</width>
+     <y>330</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>restrict</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_25">
    <property name="geometry">
     <rect>
-     <x>212</x>
-     <y>480</y>
-     <width>81</width>
+     <x>210</x>
+     <y>360</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>inversely</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_26">
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>210</y>
-     <width>81</width>
+     <y>390</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>equation</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_27">
    <property name="geometry">
     <rect>
-     <x>212</x>
+     <x>210</x>
      <y>420</y>
-     <width>81</width>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>offer</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_28">
    <property name="geometry">
     <rect>
-     <x>212</x>
+     <x>210</x>
      <y>450</y>
-     <width>81</width>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>high</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_29">
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>90</y>
-     <width>81</width>
+     <y>480</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>containing</string>
+    <string>including</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_30">
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>120</y>
-     <width>81</width>
+     <y>510</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>electric</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_timer">
-   <property name="geometry">
-    <rect>
-     <x>250</x>
-     <y>550</y>
-     <width>161</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
+    <string>including</string>
    </property>
   </widget>
  </widget>
