add .py graphics files variant 2

--- a/server/UI/variant_2/zadanie2_part1_var2.ui
+++ b/server/UI/variant_2/zadanie2_part1_var2.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>493</width>
-    <height>361</height>
+    <width>529</width>
+    <height>343</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,7 @@
   <widget class="QLabel" name="label_title">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>30</x>
      <y>10</y>
      <width>471</width>
      <height>61</height>
@@ -48,8 +48,8 @@
   <widget class="QLabel" name="label_number_1">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>80</y>
+     <x>20</x>
+     <y>100</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -61,8 +61,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_1">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>80</y>
+     <x>132</x>
+     <y>100</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -71,24 +71,11 @@
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_answer">
-   <property name="geometry">
-    <rect>
-     <x>130</x>
-     <y>320</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Далее</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_word_1">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>80</y>
+     <x>40</x>
+     <y>100</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -100,8 +87,8 @@
   <widget class="QLabel" name="label_word_2">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>110</y>
+     <x>40</x>
+     <y>130</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -113,8 +100,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_2">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>110</y>
+     <x>132</x>
+     <y>130</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -123,8 +110,8 @@
   <widget class="QLabel" name="label_number_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>110</y>
+     <x>20</x>
+     <y>130</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -136,8 +123,8 @@
   <widget class="QLabel" name="label_word_3">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>140</y>
+     <x>40</x>
+     <y>160</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -149,8 +136,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_3">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>140</y>
+     <x>132</x>
+     <y>160</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -159,8 +146,8 @@
   <widget class="QLabel" name="label_number_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>140</y>
+     <x>20</x>
+     <y>160</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -172,8 +159,8 @@
   <widget class="QLabel" name="label_word_4">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>170</y>
+     <x>40</x>
+     <y>190</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -185,8 +172,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_4">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>170</y>
+     <x>132</x>
+     <y>190</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -195,8 +182,8 @@
   <widget class="QLabel" name="label_number_4">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>170</y>
+     <x>20</x>
+     <y>190</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -208,8 +195,8 @@
   <widget class="QLabel" name="label_word_5">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>200</y>
+     <x>40</x>
+     <y>220</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -221,8 +208,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_5">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>200</y>
+     <x>132</x>
+     <y>220</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -231,8 +218,8 @@
   <widget class="QLabel" name="label_number_5">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>200</y>
+     <x>20</x>
+     <y>220</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -244,8 +231,8 @@
   <widget class="QLabel" name="label_word_6">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>230</y>
+     <x>40</x>
+     <y>250</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -257,8 +244,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_6">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>230</y>
+     <x>132</x>
+     <y>250</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -267,8 +254,8 @@
   <widget class="QLabel" name="label_number_6">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>230</y>
+     <x>20</x>
+     <y>250</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -280,8 +267,8 @@
   <widget class="QLabel" name="label_word_7">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>260</y>
+     <x>40</x>
+     <y>280</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -293,8 +280,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_7">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>260</y>
+     <x>132</x>
+     <y>280</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -303,8 +290,8 @@
   <widget class="QLabel" name="label_number_7">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>260</y>
+     <x>20</x>
+     <y>280</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -316,8 +303,8 @@
   <widget class="QLabel" name="label_word_8">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>290</y>
+     <x>40</x>
+     <y>310</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -329,8 +316,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_8">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>290</y>
+     <x>132</x>
+     <y>310</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -339,8 +326,8 @@
   <widget class="QLabel" name="label_number_8">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>290</y>
+     <x>20</x>
+     <y>310</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -353,7 +340,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>80</y>
+     <y>100</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -366,7 +353,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>80</y>
+     <y>100</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -376,7 +363,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>80</y>
+     <y>100</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -389,7 +376,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>110</y>
+     <y>130</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -402,7 +389,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>110</y>
+     <y>130</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -412,7 +399,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>110</y>
+     <y>130</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -425,7 +412,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>140</y>
+     <y>160</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -438,7 +425,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>140</y>
+     <y>160</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -448,7 +435,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>140</y>
+     <y>160</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -461,7 +448,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>170</y>
+     <y>190</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -474,7 +461,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>170</y>
+     <y>190</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -484,7 +471,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>170</y>
+     <y>190</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -497,7 +484,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>200</y>
+     <y>220</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -510,7 +497,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>200</y>
+     <y>220</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -520,7 +507,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>200</y>
+     <y>220</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -533,7 +520,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>230</y>
+     <y>250</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -546,7 +533,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>230</y>
+     <y>250</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -556,7 +543,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>230</y>
+     <y>250</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -569,7 +556,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>260</y>
+     <y>280</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -582,7 +569,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>260</y>
+     <y>280</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -592,7 +579,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>260</y>
+     <y>280</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -605,7 +592,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>290</y>
+     <y>310</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -615,7 +602,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>290</y>
+     <y>310</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -628,7 +615,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>290</y>
+     <y>310</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -637,17 +624,264 @@
     <string>greater</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_timer">
+  <widget class="QLineEdit" name="lineEdit_answer_17">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>320</y>
-     <width>211</width>
-     <height>31</height>
+     <x>200</x>
+     <y>100</y>
+     <width>31</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_18">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>130</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_19">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>160</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_20">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>190</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_21">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>220</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_22">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>250</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_23">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>280</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_24">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>310</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_25">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>100</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_26">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>130</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_27">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>160</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_28">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>190</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_29">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>220</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_30">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>250</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_31">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>280</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_32">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>310</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>70</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>70</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>70</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>70</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
    </property>
   </widget>
  </widget>
