--- a/server/UI/variant_2/zadanie1_part1_var2.ui
+++ b/server/UI/variant_2/zadanie1_part1_var2.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>493</width>
-    <height>460</height>
+    <width>764</width>
+    <height>437</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,7 @@
   <widget class="QLabel" name="label_title">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>160</x>
      <y>10</y>
      <width>471</width>
      <height>51</height>
@@ -49,7 +49,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>80</y>
+     <y>100</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -62,7 +62,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>80</y>
+     <y>100</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -72,7 +72,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>110</y>
+     <y>130</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -85,7 +85,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>110</y>
+     <y>130</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -95,7 +95,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>140</y>
+     <y>160</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -108,7 +108,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>140</y>
+     <y>160</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -118,7 +118,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>170</y>
+     <y>190</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -131,7 +131,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>170</y>
+     <y>190</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -141,7 +141,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>200</y>
+     <y>220</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -154,7 +154,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>200</y>
+     <y>220</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -164,7 +164,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>230</y>
+     <y>250</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -177,7 +177,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>230</y>
+     <y>250</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -187,7 +187,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>260</y>
+     <y>280</y>
      <width>111</width>
      <height>20</height>
     </rect>
@@ -200,7 +200,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>260</y>
+     <y>280</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -210,7 +210,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>290</y>
+     <y>310</y>
      <width>111</width>
      <height>20</height>
     </rect>
@@ -223,7 +223,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>290</y>
+     <y>310</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -233,7 +233,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>320</y>
+     <y>340</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -246,7 +246,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>320</y>
+     <y>340</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -256,7 +256,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>350</y>
+     <y>370</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -269,7 +269,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>350</y>
+     <y>370</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -279,7 +279,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>380</y>
+     <y>400</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -292,7 +292,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>380</y>
+     <y>400</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -301,8 +301,8 @@
   <widget class="QLabel" name="label_word_12">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>80</y>
+     <x>390</x>
+     <y>100</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -314,8 +314,8 @@
   <widget class="QLineEdit" name="lineEdit_word_12">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>80</y>
+     <x>500</x>
+     <y>100</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -324,8 +324,8 @@
   <widget class="QLabel" name="label_word_13">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>110</y>
+     <x>390</x>
+     <y>130</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -337,8 +337,8 @@
   <widget class="QLineEdit" name="lineEdit_word_13">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>110</y>
+     <x>500</x>
+     <y>130</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -347,8 +347,8 @@
   <widget class="QLabel" name="label_word_14">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>140</y>
+     <x>390</x>
+     <y>160</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -360,8 +360,8 @@
   <widget class="QLineEdit" name="lineEdit_word_14">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>140</y>
+     <x>500</x>
+     <y>160</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -370,8 +370,8 @@
   <widget class="QLabel" name="label_word_15">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>170</y>
+     <x>390</x>
+     <y>190</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -383,8 +383,8 @@
   <widget class="QLineEdit" name="lineEdit_word_15">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>170</y>
+     <x>500</x>
+     <y>190</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -393,8 +393,8 @@
   <widget class="QLabel" name="label_word_16">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>200</y>
+     <x>390</x>
+     <y>220</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -406,8 +406,8 @@
   <widget class="QLineEdit" name="lineEdit_word_16">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>200</y>
+     <x>500</x>
+     <y>220</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -416,8 +416,8 @@
   <widget class="QLabel" name="label_word_17">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>230</y>
+     <x>390</x>
+     <y>250</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -429,8 +429,8 @@
   <widget class="QLineEdit" name="lineEdit_word_17">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>230</y>
+     <x>500</x>
+     <y>250</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -439,8 +439,8 @@
   <widget class="QLabel" name="label_word_18">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>260</y>
+     <x>390</x>
+     <y>280</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -452,8 +452,8 @@
   <widget class="QLineEdit" name="lineEdit_word_18">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>260</y>
+     <x>500</x>
+     <y>280</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -462,8 +462,8 @@
   <widget class="QLabel" name="label_word_19">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>290</y>
+     <x>390</x>
+     <y>310</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -475,8 +475,8 @@
   <widget class="QLineEdit" name="lineEdit_word_19">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>290</y>
+     <x>500</x>
+     <y>310</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -485,8 +485,8 @@
   <widget class="QLabel" name="label_word_20">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>320</y>
+     <x>390</x>
+     <y>340</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -498,8 +498,8 @@
   <widget class="QLineEdit" name="lineEdit_word_20">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>320</y>
+     <x>500</x>
+     <y>340</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -508,8 +508,8 @@
   <widget class="QLabel" name="label_word_21">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>350</y>
+     <x>390</x>
+     <y>370</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -521,37 +521,273 @@
   <widget class="QLineEdit" name="lineEdit_word_21">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>350</y>
+     <x>500</x>
+     <y>370</y>
      <width>113</width>
      <height>20</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_answer">
+  <widget class="QLineEdit" name="lineEdit_word_22">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>420</y>
+     <x>260</x>
+     <y>100</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_23">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>130</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_24">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>160</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_25">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>190</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_26">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>220</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_27">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>250</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_28">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>280</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_29">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>310</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_30">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>340</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_31">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>370</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_32">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>400</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_33">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>100</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_34">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>130</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_35">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>160</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_36">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>190</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_37">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>220</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_38">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>250</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_39">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>280</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_40">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>310</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_41">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>340</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_word_42">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>370</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>70</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>70</y>
      <width>101</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Далее</string>
+    <string>Правильный ответ</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_timer">
+  <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>410</y>
-     <width>171</width>
+     <x>540</x>
+     <y>70</y>
+     <width>31</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>70</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
    </property>
   </widget>
  </widget>
