--- a/server/UI/variant_2/zadanie3_4_5_part1_var2.ui
+++ b/server/UI/variant_2/zadanie3_4_5_part1_var2.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>872</width>
-    <height>595</height>
+    <width>895</width>
+    <height>566</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,19 +42,6 @@
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_answer">
-   <property name="geometry">
-    <rect>
-     <x>330</x>
-     <y>540</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Далее</string>
    </property>
   </widget>
   <widget class="QLabel" name="label">
@@ -270,7 +257,7 @@
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>450</y>
+     <y>510</y>
      <width>91</width>
      <height>41</height>
     </rect>
@@ -315,7 +302,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>390</y>
+     <y>410</y>
      <width>341</width>
      <height>20</height>
     </rect>
@@ -357,7 +344,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>80</y>
+     <y>110</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -370,7 +357,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>80</y>
+     <y>110</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -380,7 +367,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>100</y>
+     <y>130</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -393,7 +380,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>110</y>
+     <y>140</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -403,7 +390,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>140</y>
+     <y>170</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -416,7 +403,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>140</y>
+     <y>170</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -426,7 +413,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>170</y>
+     <y>200</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -439,7 +426,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>170</y>
+     <y>200</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -449,7 +436,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>200</y>
+     <y>230</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -462,7 +449,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>200</y>
+     <y>230</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -472,7 +459,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>230</y>
+     <y>260</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -485,7 +472,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>230</y>
+     <y>260</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -495,7 +482,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>260</y>
+     <y>290</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -508,7 +495,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>260</y>
+     <y>290</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -518,7 +505,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>290</y>
+     <y>320</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -531,7 +518,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>290</y>
+     <y>320</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -541,7 +528,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>320</y>
+     <y>350</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -554,7 +541,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>320</y>
+     <y>350</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -564,7 +551,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>350</y>
+     <y>380</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -577,7 +564,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>350</y>
+     <y>380</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -587,7 +574,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>380</y>
+     <y>410</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -600,7 +587,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>380</y>
+     <y>410</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -610,7 +597,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>410</y>
+     <y>440</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -623,7 +610,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>410</y>
+     <y>440</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -633,7 +620,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>440</y>
+     <y>470</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -646,7 +633,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>440</y>
+     <y>470</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -656,7 +643,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>470</y>
+     <y>500</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -669,7 +656,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>470</y>
+     <y>500</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -679,7 +666,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>500</y>
+     <y>530</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -692,23 +679,222 @@
    <property name="geometry">
     <rect>
      <x>730</x>
+     <y>530</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadanie4_2">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>470</y>
+     <width>341</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_13">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>380</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_15">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>440</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_16">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>110</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_17">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>140</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_18">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>170</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_19">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>200</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_20">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>230</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_21">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>260</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_22">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>290</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_23">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>320</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_24">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>350</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_25">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>380</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_26">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>410</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_27">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>440</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_28">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>470</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_zadane5_29">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
      <y>500</y>
      <width>41</width>
      <height>20</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_timer">
+  <widget class="QLineEdit" name="lineEdit_zadane5_30">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>540</y>
-     <width>171</width>
+     <x>820</x>
+     <y>530</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_17">
+   <property name="geometry">
+    <rect>
+     <x>730</x>
+     <y>80</y>
+     <width>41</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_19">
+   <property name="geometry">
+    <rect>
+     <x>790</x>
+     <y>80</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
    </property>
   </widget>
  </widget>
