--- a/server/UI/variant_2/zadanie5_part2_var2.ui
+++ b/server/UI/variant_2/zadanie5_part2_var2.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>454</width>
-    <height>449</height>
+    <width>537</width>
+    <height>416</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,7 @@
   <widget class="QLabel" name="label_title">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>80</x>
      <y>20</y>
      <width>381</width>
      <height>61</height>
@@ -48,8 +48,8 @@
   <widget class="QLabel" name="label_word_5">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>250</y>
+     <x>190</x>
+     <y>270</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -61,31 +61,18 @@
   <widget class="QLineEdit" name="lineEdit_answer_3">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>170</y>
+     <x>20</x>
+     <y>190</y>
      <width>31</width>
      <height>20</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_answer">
-   <property name="geometry">
-    <rect>
-     <x>140</x>
-     <y>400</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Далее</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_number_1">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>90</y>
+     <x>170</x>
+     <y>110</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -97,8 +84,8 @@
   <widget class="QLabel" name="label_number_4">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>210</y>
+     <x>170</x>
+     <y>230</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -110,8 +97,8 @@
   <widget class="QLabel" name="label_word_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>170</y>
+     <x>190</x>
+     <y>190</y>
      <width>121</width>
      <height>31</height>
     </rect>
@@ -123,8 +110,8 @@
   <widget class="QLabel" name="label_word_4">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>210</y>
+     <x>190</x>
+     <y>230</y>
      <width>111</width>
      <height>20</height>
     </rect>
@@ -136,8 +123,8 @@
   <widget class="QLabel" name="label_word_1">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>90</y>
+     <x>190</x>
+     <y>110</y>
      <width>121</width>
      <height>31</height>
     </rect>
@@ -149,8 +136,8 @@
   <widget class="QLabel" name="label_word_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>130</y>
+     <x>190</x>
+     <y>150</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -162,8 +149,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_4">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>210</y>
+     <x>20</x>
+     <y>230</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -172,8 +159,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_2">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>130</y>
+     <x>20</x>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -182,8 +169,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_1">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>90</y>
+     <x>20</x>
+     <y>110</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -195,8 +182,8 @@
   <widget class="QLabel" name="label_number_2">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>130</y>
+     <x>170</x>
+     <y>150</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -208,8 +195,8 @@
   <widget class="QLabel" name="label_number_5">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>250</y>
+     <x>170</x>
+     <y>270</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -221,8 +208,8 @@
   <widget class="QLabel" name="label_number_3">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>170</y>
+     <x>170</x>
+     <y>190</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -234,8 +221,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_5">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>250</y>
+     <x>20</x>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -244,8 +231,8 @@
   <widget class="QLabel" name="label_word_17">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>230</y>
+     <x>340</x>
+     <y>250</y>
      <width>201</width>
      <height>41</height>
     </rect>
@@ -258,8 +245,8 @@
   <widget class="QLabel" name="label_word_20">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>360</y>
+     <x>340</x>
+     <y>380</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -272,8 +259,8 @@
   <widget class="QLabel" name="label_word_23">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>190</y>
+     <x>340</x>
+     <y>210</y>
      <width>201</width>
      <height>41</height>
     </rect>
@@ -287,8 +274,8 @@
   <widget class="QLabel" name="label_word_24">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>310</y>
+     <x>340</x>
+     <y>330</y>
      <width>201</width>
      <height>51</height>
     </rect>
@@ -302,8 +289,8 @@
   <widget class="QLabel" name="label_word_26">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>270</y>
+     <x>340</x>
+     <y>290</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -316,8 +303,8 @@
   <widget class="QLabel" name="label_word_29">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>90</y>
+     <x>340</x>
+     <y>110</y>
      <width>201</width>
      <height>41</height>
     </rect>
@@ -330,8 +317,8 @@
   <widget class="QLabel" name="label_word_30">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>130</y>
+     <x>340</x>
+     <y>150</y>
      <width>201</width>
      <height>51</height>
     </rect>
@@ -345,8 +332,8 @@
   <widget class="QLabel" name="label_number_6">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>90</y>
+     <x>330</x>
+     <y>110</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -358,8 +345,8 @@
   <widget class="QLabel" name="label_number_7">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>130</y>
+     <x>330</x>
+     <y>150</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -371,8 +358,8 @@
   <widget class="QLabel" name="label_number_8">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>270</y>
+     <x>330</x>
+     <y>290</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -384,8 +371,8 @@
   <widget class="QLabel" name="label_number_9">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>180</y>
+     <x>330</x>
+     <y>200</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -397,8 +384,8 @@
   <widget class="QLabel" name="label_number_10">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>230</y>
+     <x>330</x>
+     <y>250</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -410,8 +397,8 @@
   <widget class="QLabel" name="label_number_11">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>310</y>
+     <x>330</x>
+     <y>330</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -423,8 +410,8 @@
   <widget class="QLabel" name="label_number_12">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>360</y>
+     <x>330</x>
+     <y>380</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -433,13 +420,91 @@
     <string>7</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_timer">
+  <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>400</y>
-     <width>171</width>
+     <x>20</x>
+     <y>80</y>
+     <width>31</width>
      <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>80</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_6">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>110</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_7">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>150</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_8">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>190</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_9">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>230</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_10">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>270</y>
+     <width>31</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
