--- a/server/UI/variant_2/zadanie6_part2_var2.ui
+++ b/server/UI/variant_2/zadanie6_part2_var2.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>420</width>
-    <height>660</height>
+    <width>549</width>
+    <height>602</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,7 @@
   <widget class="QLabel" name="label_title">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>80</x>
      <y>20</y>
      <width>381</width>
      <height>41</height>
@@ -47,7 +47,7 @@
   <widget class="QLabel" name="label_word_5">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>198</x>
      <y>270</y>
      <width>151</width>
      <height>41</height>
@@ -62,7 +62,7 @@
   <widget class="QLineEdit" name="lineEdit_answer_10">
    <property name="geometry">
     <rect>
-     <x>12</x>
+     <x>20</x>
      <y>540</y>
      <width>31</width>
      <height>20</height>
@@ -72,7 +72,7 @@
   <widget class="QLabel" name="label_number_8">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>178</x>
      <y>460</y>
      <width>16</width>
      <height>20</height>
@@ -85,30 +85,17 @@
   <widget class="QLineEdit" name="lineEdit_answer_3">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>18</x>
      <y>190</y>
      <width>31</width>
      <height>20</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_answer">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>610</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Далее</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_number_10">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>180</x>
      <y>540</y>
      <width>16</width>
      <height>20</height>
@@ -121,7 +108,7 @@
   <widget class="QLabel" name="label_word_9">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>200</x>
      <y>500</y>
      <width>151</width>
      <height>31</height>
@@ -135,7 +122,7 @@
   <widget class="QLabel" name="label_number_1">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>178</x>
      <y>90</y>
      <width>16</width>
      <height>20</height>
@@ -148,7 +135,7 @@
   <widget class="QLineEdit" name="lineEdit_answer_6">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>18</x>
      <y>320</y>
      <width>31</width>
      <height>20</height>
@@ -158,7 +145,7 @@
   <widget class="QLineEdit" name="lineEdit_answer_8">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>18</x>
      <y>460</y>
      <width>31</width>
      <height>20</height>
@@ -168,7 +155,7 @@
   <widget class="QLabel" name="label_number_4">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>178</x>
      <y>230</y>
      <width>16</width>
      <height>20</height>
@@ -181,7 +168,7 @@
   <widget class="QLabel" name="label_word_3">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>200</x>
      <y>190</y>
      <width>141</width>
      <height>21</height>
@@ -194,7 +181,7 @@
   <widget class="QLabel" name="label_word_4">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>198</x>
      <y>230</y>
      <width>141</width>
      <height>21</height>
@@ -207,7 +194,7 @@
   <widget class="QLineEdit" name="lineEdit_answer_9">
    <property name="geometry">
     <rect>
-     <x>12</x>
+     <x>20</x>
      <y>500</y>
      <width>31</width>
      <height>20</height>
@@ -217,7 +204,7 @@
   <widget class="QLabel" name="label_word_1">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>198</x>
      <y>90</y>
      <width>141</width>
      <height>41</height>
@@ -232,7 +219,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_9">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>180</x>
      <y>500</y>
      <width>16</width>
      <height>20</height>
@@ -245,7 +232,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_8">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>198</x>
      <y>460</y>
      <width>141</width>
      <height>31</height>
@@ -259,7 +246,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_7">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>198</x>
      <y>380</y>
      <width>141</width>
      <height>31</height>
@@ -273,7 +260,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_10">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>200</x>
      <y>540</y>
      <width>141</width>
      <height>31</height>
@@ -287,7 +274,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_2">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>200</x>
      <y>140</y>
      <width>131</width>
      <height>41</height>
@@ -302,7 +289,7 @@ controlled rectifiers use…</string>
   <widget class="QLineEdit" name="lineEdit_answer_4">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>18</x>
      <y>230</y>
      <width>31</width>
      <height>20</height>
@@ -312,7 +299,7 @@ controlled rectifiers use…</string>
   <widget class="QLineEdit" name="lineEdit_answer_2">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>18</x>
      <y>140</y>
      <width>31</width>
      <height>20</height>
@@ -322,7 +309,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_6">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>178</x>
      <y>320</y>
      <width>16</width>
      <height>20</height>
@@ -335,7 +322,7 @@ controlled rectifiers use…</string>
   <widget class="QLineEdit" name="lineEdit_answer_7">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>18</x>
      <y>380</y>
      <width>31</width>
      <height>20</height>
@@ -345,7 +332,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_7">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>178</x>
      <y>380</y>
      <width>16</width>
      <height>20</height>
@@ -358,7 +345,7 @@ controlled rectifiers use…</string>
   <widget class="QLineEdit" name="lineEdit_answer_1">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>18</x>
      <y>90</y>
      <width>31</width>
      <height>20</height>
@@ -371,7 +358,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>180</x>
      <y>140</y>
      <width>16</width>
      <height>20</height>
@@ -384,7 +371,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_5">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>178</x>
      <y>270</y>
      <width>16</width>
      <height>20</height>
@@ -397,7 +384,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_3">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>180</x>
      <y>190</y>
      <width>16</width>
      <height>20</height>
@@ -410,7 +397,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_6">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>198</x>
      <y>320</y>
      <width>141</width>
      <height>21</height>
@@ -423,7 +410,7 @@ controlled rectifiers use…</string>
   <widget class="QLineEdit" name="lineEdit_answer_5">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>18</x>
      <y>270</y>
      <width>31</width>
      <height>20</height>
@@ -433,7 +420,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_16">
    <property name="geometry">
     <rect>
-     <x>252</x>
+     <x>382</x>
      <y>540</y>
      <width>161</width>
      <height>61</height>
@@ -449,7 +436,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_17">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>380</x>
      <y>230</y>
      <width>151</width>
      <height>31</height>
@@ -463,7 +450,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_18">
    <property name="geometry">
     <rect>
-     <x>252</x>
+     <x>382</x>
      <y>500</y>
      <width>151</width>
      <height>31</height>
@@ -477,7 +464,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_20">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>380</x>
      <y>380</y>
      <width>151</width>
      <height>71</height>
@@ -494,7 +481,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_21">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>380</x>
      <y>460</y>
      <width>151</width>
      <height>21</height>
@@ -507,7 +494,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_23">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>380</x>
      <y>190</y>
      <width>151</width>
      <height>31</height>
@@ -521,7 +508,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_24">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>380</x>
      <y>320</y>
      <width>151</width>
      <height>51</height>
@@ -536,7 +523,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_26">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>380</x>
      <y>270</y>
      <width>151</width>
      <height>31</height>
@@ -550,7 +537,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_29">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>380</x>
      <y>90</y>
      <width>161</width>
      <height>31</height>
@@ -564,7 +551,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_word_30">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>380</x>
      <y>140</y>
      <width>171</width>
      <height>31</height>
@@ -578,7 +565,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_11">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>360</x>
      <y>90</y>
      <width>16</width>
      <height>20</height>
@@ -591,7 +578,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_12">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>360</x>
      <y>140</y>
      <width>16</width>
      <height>20</height>
@@ -604,7 +591,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_13">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>360</x>
      <y>190</y>
      <width>16</width>
      <height>20</height>
@@ -617,7 +604,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_14">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>360</x>
      <y>230</y>
      <width>16</width>
      <height>20</height>
@@ -630,7 +617,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_15">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>360</x>
      <y>320</y>
      <width>16</width>
      <height>20</height>
@@ -643,7 +630,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_16">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>360</x>
      <y>380</y>
      <width>16</width>
      <height>20</height>
@@ -656,7 +643,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_17">
    <property name="geometry">
     <rect>
-     <x>232</x>
+     <x>362</x>
      <y>540</y>
      <width>16</width>
      <height>20</height>
@@ -669,7 +656,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_18">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>360</x>
      <y>270</y>
      <width>16</width>
      <height>20</height>
@@ -682,7 +669,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_19">
    <property name="geometry">
     <rect>
-     <x>232</x>
+     <x>362</x>
      <y>500</y>
      <width>16</width>
      <height>20</height>
@@ -695,7 +682,7 @@ controlled rectifiers use…</string>
   <widget class="QLabel" name="label_number_20">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>360</x>
      <y>460</y>
      <width>16</width>
      <height>20</height>
@@ -705,17 +692,160 @@ controlled rectifiers use…</string>
     <string>8</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_timer">
+  <widget class="QLineEdit" name="lineEdit_answer_11">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>610</y>
-     <width>171</width>
-     <height>31</height>
+     <x>100</x>
+     <y>90</y>
+     <width>31</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_12">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>140</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_13">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>190</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_14">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>230</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_15">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>270</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_16">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>320</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_17">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>380</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_18">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>460</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_19">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>500</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_20">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>540</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>60</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>60</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
    </property>
   </widget>
  </widget>
