--- a/server/UI/variant_2/zadanie7_part1_var2.ui
+++ b/server/UI/variant_2/zadanie7_part1_var2.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>421</width>
-    <height>436</height>
+    <width>504</width>
+    <height>402</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -48,8 +48,8 @@
   <widget class="QLabel" name="label_word_5">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>250</y>
+     <x>170</x>
+     <y>270</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -61,31 +61,18 @@
   <widget class="QLineEdit" name="lineEdit_answer_3">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>170</y>
+     <x>20</x>
+     <y>190</y>
      <width>31</width>
      <height>20</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_answer">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>390</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Далее</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_number_1">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>90</y>
+     <x>150</x>
+     <y>110</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -97,8 +84,8 @@
   <widget class="QLabel" name="label_number_4">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>210</y>
+     <x>150</x>
+     <y>230</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -110,8 +97,8 @@
   <widget class="QLabel" name="label_word_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>170</y>
+     <x>170</x>
+     <y>190</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -123,8 +110,8 @@
   <widget class="QLabel" name="label_word_4">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>210</y>
+     <x>170</x>
+     <y>230</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -136,8 +123,8 @@
   <widget class="QLabel" name="label_word_1">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>90</y>
+     <x>170</x>
+     <y>110</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -149,8 +136,8 @@
   <widget class="QLabel" name="label_word_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>130</y>
+     <x>170</x>
+     <y>150</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -162,8 +149,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_4">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>210</y>
+     <x>20</x>
+     <y>230</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -172,8 +159,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_2">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>130</y>
+     <x>20</x>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -182,8 +169,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_1">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>90</y>
+     <x>20</x>
+     <y>110</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -195,8 +182,8 @@
   <widget class="QLabel" name="label_number_2">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>130</y>
+     <x>150</x>
+     <y>150</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -208,8 +195,8 @@
   <widget class="QLabel" name="label_number_5">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>250</y>
+     <x>150</x>
+     <y>270</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -221,8 +208,8 @@
   <widget class="QLabel" name="label_number_3">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>170</y>
+     <x>150</x>
+     <y>190</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -234,8 +221,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_5">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>250</y>
+     <x>20</x>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -244,8 +231,8 @@
   <widget class="QLabel" name="label_word_17">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>230</y>
+     <x>300</x>
+     <y>250</y>
      <width>201</width>
      <height>51</height>
     </rect>
@@ -259,8 +246,8 @@
   <widget class="QLabel" name="label_word_23">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>170</y>
+     <x>300</x>
+     <y>190</y>
      <width>201</width>
      <height>51</height>
     </rect>
@@ -274,8 +261,8 @@
   <widget class="QLabel" name="label_word_24">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>350</y>
+     <x>300</x>
+     <y>370</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -288,8 +275,8 @@
   <widget class="QLabel" name="label_word_26">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>290</y>
+     <x>300</x>
+     <y>310</y>
      <width>201</width>
      <height>51</height>
     </rect>
@@ -303,8 +290,8 @@
   <widget class="QLabel" name="label_word_29">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>90</y>
+     <x>300</x>
+     <y>110</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -317,8 +304,8 @@
   <widget class="QLabel" name="label_word_30">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>130</y>
+     <x>300</x>
+     <y>150</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -331,8 +318,8 @@
   <widget class="QLabel" name="label_number_6">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>90</y>
+     <x>290</x>
+     <y>110</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -344,8 +331,8 @@
   <widget class="QLabel" name="label_number_7">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>130</y>
+     <x>290</x>
+     <y>150</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -357,8 +344,8 @@
   <widget class="QLabel" name="label_number_8">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>290</y>
+     <x>290</x>
+     <y>310</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -370,8 +357,8 @@
   <widget class="QLabel" name="label_number_9">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>170</y>
+     <x>290</x>
+     <y>190</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -383,8 +370,8 @@
   <widget class="QLabel" name="label_number_10">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>230</y>
+     <x>290</x>
+     <y>250</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -396,8 +383,8 @@
   <widget class="QLabel" name="label_number_11">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>350</y>
+     <x>290</x>
+     <y>370</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -406,17 +393,95 @@
     <string>6</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_timer">
+  <widget class="QLineEdit" name="lineEdit_answer_6">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>390</y>
-     <width>171</width>
-     <height>31</height>
+     <x>90</x>
+     <y>110</y>
+     <width>31</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_7">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>150</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_8">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>190</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_9">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>230</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_10">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>270</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>80</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>80</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
    </property>
   </widget>
  </widget>
