--- a/server/UI/variant_2/zadanie8_part1_var2.ui
+++ b/server/UI/variant_2/zadanie8_part1_var2.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>425</width>
-    <height>595</height>
+    <width>525</width>
+    <height>559</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,7 @@
   <widget class="QLabel" name="label_title">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>70</x>
      <y>20</y>
      <width>381</width>
      <height>41</height>
@@ -47,8 +47,8 @@
   <widget class="QLabel" name="label_word_5">
    <property name="geometry">
     <rect>
-     <x>68</x>
-     <y>290</y>
+     <x>168</x>
+     <y>300</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -60,8 +60,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_10">
    <property name="geometry">
     <rect>
-     <x>12</x>
-     <y>510</y>
+     <x>20</x>
+     <y>520</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -70,8 +70,8 @@
   <widget class="QLabel" name="label_number_8">
    <property name="geometry">
     <rect>
-     <x>48</x>
-     <y>430</y>
+     <x>148</x>
+     <y>440</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -83,31 +83,18 @@
   <widget class="QLineEdit" name="lineEdit_answer_3">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>190</y>
+     <x>18</x>
+     <y>200</y>
      <width>31</width>
      <height>20</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_answer">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>550</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Далее</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_number_10">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>510</y>
+     <x>150</x>
+     <y>520</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -119,8 +106,8 @@
   <widget class="QLabel" name="label_word_9">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>470</y>
+     <x>170</x>
+     <y>480</y>
      <width>141</width>
      <height>21</height>
     </rect>
@@ -132,8 +119,8 @@
   <widget class="QLabel" name="label_number_1">
    <property name="geometry">
     <rect>
-     <x>48</x>
-     <y>90</y>
+     <x>148</x>
+     <y>100</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -145,8 +132,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_6">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>330</y>
+     <x>18</x>
+     <y>340</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -155,8 +142,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_8">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>430</y>
+     <x>18</x>
+     <y>440</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -165,8 +152,8 @@
   <widget class="QLabel" name="label_number_4">
    <property name="geometry">
     <rect>
-     <x>48</x>
-     <y>240</y>
+     <x>148</x>
+     <y>250</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -178,8 +165,8 @@
   <widget class="QLabel" name="label_word_3">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>191</y>
+     <x>170</x>
+     <y>201</y>
      <width>131</width>
      <height>20</height>
     </rect>
@@ -191,8 +178,8 @@
   <widget class="QLabel" name="label_word_4">
    <property name="geometry">
     <rect>
-     <x>68</x>
-     <y>230</y>
+     <x>168</x>
+     <y>240</y>
      <width>131</width>
      <height>61</height>
     </rect>
@@ -206,8 +193,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_9">
    <property name="geometry">
     <rect>
-     <x>12</x>
-     <y>470</y>
+     <x>20</x>
+     <y>480</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -216,8 +203,8 @@
   <widget class="QLabel" name="label_word_1">
    <property name="geometry">
     <rect>
-     <x>68</x>
-     <y>90</y>
+     <x>168</x>
+     <y>100</y>
      <width>141</width>
      <height>21</height>
     </rect>
@@ -229,8 +216,8 @@
   <widget class="QLabel" name="label_number_9">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>470</y>
+     <x>150</x>
+     <y>480</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -242,8 +229,8 @@
   <widget class="QLabel" name="label_word_8">
    <property name="geometry">
     <rect>
-     <x>68</x>
-     <y>430</y>
+     <x>168</x>
+     <y>440</y>
      <width>141</width>
      <height>20</height>
     </rect>
@@ -255,8 +242,8 @@
   <widget class="QLabel" name="label_word_7">
    <property name="geometry">
     <rect>
-     <x>68</x>
-     <y>380</y>
+     <x>168</x>
+     <y>390</y>
      <width>141</width>
      <height>21</height>
     </rect>
@@ -268,8 +255,8 @@
   <widget class="QLabel" name="label_word_10">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>510</y>
+     <x>170</x>
+     <y>520</y>
      <width>141</width>
      <height>21</height>
     </rect>
@@ -281,8 +268,8 @@
   <widget class="QLabel" name="label_word_2">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>120</y>
+     <x>170</x>
+     <y>130</y>
      <width>131</width>
      <height>31</height>
     </rect>
@@ -295,8 +282,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_4">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>240</y>
+     <x>18</x>
+     <y>250</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -305,8 +292,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_2">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>120</y>
+     <x>18</x>
+     <y>130</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -315,8 +302,8 @@
   <widget class="QLabel" name="label_number_6">
    <property name="geometry">
     <rect>
-     <x>48</x>
-     <y>330</y>
+     <x>148</x>
+     <y>340</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -328,8 +315,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_7">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>380</y>
+     <x>18</x>
+     <y>390</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -338,8 +325,8 @@
   <widget class="QLabel" name="label_number_7">
    <property name="geometry">
     <rect>
-     <x>48</x>
-     <y>380</y>
+     <x>148</x>
+     <y>390</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -351,8 +338,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_1">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>90</y>
+     <x>18</x>
+     <y>100</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -364,8 +351,8 @@
   <widget class="QLabel" name="label_number_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>120</y>
+     <x>150</x>
+     <y>130</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -377,8 +364,8 @@
   <widget class="QLabel" name="label_number_5">
    <property name="geometry">
     <rect>
-     <x>48</x>
-     <y>290</y>
+     <x>148</x>
+     <y>300</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -390,8 +377,8 @@
   <widget class="QLabel" name="label_number_3">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>190</y>
+     <x>150</x>
+     <y>200</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -403,8 +390,8 @@
   <widget class="QLabel" name="label_word_6">
    <property name="geometry">
     <rect>
-     <x>68</x>
-     <y>330</y>
+     <x>168</x>
+     <y>340</y>
      <width>141</width>
      <height>41</height>
     </rect>
@@ -418,8 +405,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_5">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>290</y>
+     <x>18</x>
+     <y>300</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -428,8 +415,8 @@
   <widget class="QLabel" name="label_word_16">
    <property name="geometry">
     <rect>
-     <x>252</x>
-     <y>510</y>
+     <x>352</x>
+     <y>520</y>
      <width>161</width>
      <height>31</height>
     </rect>
@@ -442,8 +429,8 @@
   <widget class="QLabel" name="label_word_17">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>240</y>
+     <x>350</x>
+     <y>250</y>
      <width>151</width>
      <height>51</height>
     </rect>
@@ -457,8 +444,8 @@
   <widget class="QLabel" name="label_word_18">
    <property name="geometry">
     <rect>
-     <x>252</x>
-     <y>470</y>
+     <x>352</x>
+     <y>480</y>
      <width>151</width>
      <height>20</height>
     </rect>
@@ -470,8 +457,8 @@
   <widget class="QLabel" name="label_word_20">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>380</y>
+     <x>350</x>
+     <y>390</y>
      <width>151</width>
      <height>51</height>
     </rect>
@@ -485,8 +472,8 @@
   <widget class="QLabel" name="label_word_21">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>430</y>
+     <x>350</x>
+     <y>440</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -499,8 +486,8 @@
   <widget class="QLabel" name="label_word_23">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>190</y>
+     <x>350</x>
+     <y>200</y>
      <width>151</width>
      <height>51</height>
     </rect>
@@ -514,8 +501,8 @@
   <widget class="QLabel" name="label_word_24">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>330</y>
+     <x>350</x>
+     <y>340</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -528,8 +515,8 @@
   <widget class="QLabel" name="label_word_26">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>290</y>
+     <x>350</x>
+     <y>300</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -542,8 +529,8 @@
   <widget class="QLabel" name="label_word_29">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>90</y>
+     <x>350</x>
+     <y>100</y>
      <width>161</width>
      <height>21</height>
     </rect>
@@ -555,8 +542,8 @@
   <widget class="QLabel" name="label_word_30">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>120</y>
+     <x>350</x>
+     <y>130</y>
      <width>161</width>
      <height>71</height>
     </rect>
@@ -572,8 +559,8 @@
   <widget class="QLabel" name="label_number_11">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>90</y>
+     <x>330</x>
+     <y>100</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -585,8 +572,8 @@
   <widget class="QLabel" name="label_number_12">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>120</y>
+     <x>330</x>
+     <y>130</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -598,8 +585,8 @@
   <widget class="QLabel" name="label_number_13">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>190</y>
+     <x>330</x>
+     <y>200</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -611,8 +598,8 @@
   <widget class="QLabel" name="label_number_14">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>240</y>
+     <x>330</x>
+     <y>250</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -624,8 +611,8 @@
   <widget class="QLabel" name="label_number_15">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>330</y>
+     <x>330</x>
+     <y>340</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -637,8 +624,8 @@
   <widget class="QLabel" name="label_number_16">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>380</y>
+     <x>330</x>
+     <y>390</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -650,8 +637,8 @@
   <widget class="QLabel" name="label_number_17">
    <property name="geometry">
     <rect>
-     <x>232</x>
-     <y>510</y>
+     <x>332</x>
+     <y>520</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -663,8 +650,8 @@
   <widget class="QLabel" name="label_number_18">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>290</y>
+     <x>330</x>
+     <y>300</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -676,8 +663,8 @@
   <widget class="QLabel" name="label_number_19">
    <property name="geometry">
     <rect>
-     <x>232</x>
-     <y>470</y>
+     <x>332</x>
+     <y>480</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -689,8 +676,8 @@
   <widget class="QLabel" name="label_number_20">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>430</y>
+     <x>330</x>
+     <y>440</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -699,17 +686,160 @@
     <string>8</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_timer">
+  <widget class="QLineEdit" name="lineEdit_answer_11">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>550</y>
-     <width>171</width>
-     <height>31</height>
+     <x>90</x>
+     <y>100</y>
+     <width>31</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_12">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>130</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_13">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>200</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_14">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>250</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_15">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>300</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_16">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>340</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_17">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>390</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_18">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>440</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_19">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>480</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_20">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>520</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>70</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>70</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
    </property>
   </widget>
  </widget>
